# GenAI-ShopAssist_2

./: README.md  __init__.py  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
PythonNoteBook/: ShopAssistAI_2.ipynb  ShopAssistAI_Demonstration_COMPLETE.ipynb
src/: Dockerfile.api  Dockerfile.gui  requirements.txt
src/ShopAssist_2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/api/: __init__.py  main.py
src/api/core/: __init__.py  chat_client.py  config.py  database.py  http_client.py
src/api/interfaces/: __init__.py  llm_interface.py
src/api/models/: __init__.py  completion_model.py  moderation_model.py
src/api/routes/: __init__.py  chat_router.py  dialog_router.py  dictionary_router.py  intent_router.py  moderation_router.py  recommendation_router.py
src/api/services/: __init__.py
src/api/services/chat/: __init__.py  chat_services.py
src/api/services/dialog/: __init__.py  dialog_service.py
src/api/services/embedding/: __init__.py  embedding_service.py
src/api/services/moderation/: __init__.py  moderation_service.py
src/data/: data_servce.py  updated_laptop.csv
src/lib/: __init__.py  chat_client.py  chat_manager.py  dialog_manager.py  dictionary_req.py  initialize_conversation.py  intent_confirmation.py  product_mapping.py  recommendation.py  user_profile.py
src/ui/: app.py  boat.py  requirements.txt
src/util/: __init__.py  helper.py
